# HoRGod

./: CMakeLists.txt  README.md  log.txt  net_config.json  output.txt  permutation.py  run.sh  run_network.sh  test.py
benchmark/: CMakeLists.txt  offline_mpc_sub.cpp  offline_mpc_tp.cpp  offline_nn.cpp  offline_perm.cpp  online_mpc.cpp  online_mpc_tp.cpp  online_nn.cpp  online_nn_tp.cpp  online_perm.cpp  utils.cpp
exp_result/: offline_fcn_0  offline_fcn_1  offline_fcn_2  offline_fcn_3  offline_fcn_4  offline_lenet_0  offline_lenet_1  offline_lenet_2  offline_lenet_3  offline_lenet_4
src/: CMakeLists.txt
src/HoRGod/: helpers.cpp  helpers.h  ijmp.cpp  ijmp.h  offline_evaluator.cpp  offline_evaluator.h  online_evaluator.cpp  online_evaluator.h  preproc.h  sharing.h  types.h
src/utils/: circuit.cpp  circuit.h  neural_network.h
test_HoRGod/: CMakeLists.txt  ijmp.cpp  jump.cpp  offline.cpp  offline_online.cpp  online.cpp  permutation.cpp  utils.cpp
